--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,16 @@ msg.erro.401=Acesso negado: Você não tem permissão de acesso à esta página!
 msg.erro.404=Página solicitada não existe!
 msg.erro.500=Ocorreu um erro interno no servidor. Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site ({email.empresa}) e informar o problema!
 msg.erro.generico=Ocorreu um erro na requisição: Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site ({email.empresa}) e informar o problema!
+
+#MENSAGENS DE ERRO VALIDAÇÃO ------------------------------------------------
+javax.validation.constraints.NotBlank.message=O campo não pode estar vazio!
+javax.validation.constraints.Size.message=O campo deve ter entre {min} e {max} caracteres!
+javax.validation.constraints.Email.message=O campo deve conter um email válido!
+javax.validation.constraints.Pattern.message=Formato inválido!
+
+msg.erro.tamanho.minimo.campo=O campo deve ter pelo menos {0} caracteres!
+msg.erro.tamanho.maximo.campo=O campo deve ter até {0} caracteres!
+msg.erro.campo.deve.ser.igual=Não corresponde, favor conferir! O conteúdo dos campos devem ser iguais!
+
+msg.erro.login.invalido=Email ou senha inválidos!
+msg.erro.email.ja.cadastrado=Email já cadastrado!
