- Criando página de reenvio de senha do usuário que esqueceu sua senha (falta fazer serviço de envio do email)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,10 @@ msg.erro.404=Página solicitada não existe!
 msg.erro.500=Ocorreu um erro interno no servidor. Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site ({email.empresa}) e informar o problema!
 msg.erro.generico=Ocorreu um erro na requisição: Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site ({email.empresa}) e informar o problema!
 
+msg.erro.login.invalido=Email ou senha inválidos!
+msg.erro.email.ja.cadastrado=Email já cadastrado!
+msg.erro.buscar.email=Email não cadastrado!
+
 #MENSAGENS DE ERRO VALIDAÇÃO ------------------------------------------------
 javax.validation.constraints.NotBlank.message=O campo não pode estar vazio!
 javax.validation.constraints.Size.message=O campo deve ter entre {min} e {max} caracteres!
@@ -17,5 +21,5 @@ msg.erro.tamanho.minimo.campo=O campo deve ter pelo menos {0} caracteres!
 msg.erro.tamanho.maximo.campo=O campo deve ter até {0} caracteres!
 msg.erro.campo.deve.ser.igual=Não corresponde, favor conferir! O conteúdo dos campos devem ser iguais!
 
-msg.erro.login.invalido=Email ou senha inválidos!
-msg.erro.email.ja.cadastrado=Email já cadastrado!
+#MENSAGENS DE SUCESSO -------------------------------------------------------
+msg.sucesso.reenvio.senha=A senha cadastrada foi enviada para o seu email.
