- Criado serviço de envio do email (funcionando)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,8 @@
 email.empresa=contatoevisas@gmail.com
 
+email.reenvio.senha.assunto=EVISAS - Reenvio de Senha
+email.reenvio.senha.texto=Prezado(a) {0},\n\nComo solicitado, segue a senha de acesso em sua conta no site Evisas (evisas.com).\n\nSenha: {1}\n\nAtenciosamente, Evisas.
+
 #MENSAGENS DE ERRO ----------------------------------------------------------
 msg.erro.400=URL solicitada incorretamente: Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site ({email.empresa}) e informar o problema!
 msg.erro.401=Acesso negado: Você não tem permissão de acesso à esta página!
@@ -10,6 +13,7 @@ msg.erro.generico=Ocorreu um erro na requisição: Tente novamente em alguns insta
 msg.erro.login.invalido=Email ou senha inválidos!
 msg.erro.email.ja.cadastrado=Email já cadastrado!
 msg.erro.buscar.email=Email não cadastrado!
+msg.erro.envio.email=Erro ao enviar email. Tente novamente após alguns instantes, se o erro persistir, contate a equipe técnica do sistema (contatoevisas@gmail.com).
 
 #MENSAGENS DE ERRO VALIDAÇÃO ------------------------------------------------
 javax.validation.constraints.NotBlank.message=O campo não pode estar vazio!
