--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,11 +4,11 @@ email.reenvio.senha.assunto=EVISAS - Reenvio de Senha
 email.reenvio.senha.texto=Prezado(a) {0},\n\nComo solicitado, segue a senha de acesso em sua conta no site Evisas (evisas.com).\n\nSenha: {1}\n\nAtenciosamente, Evisas.
 
 #MENSAGENS DE ERRO ----------------------------------------------------------
-msg.erro.400=URL solicitada incorretamente: Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site ({email.empresa}) e informar o problema!
+msg.erro.400=URL solicitada incorretamente: Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com) e informar o problema!
 msg.erro.401=Acesso negado: Você não tem permissão de acesso à esta página!
 msg.erro.404=Página solicitada não existe!
-msg.erro.500=Ocorreu um erro interno no servidor. Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site ({email.empresa}) e informar o problema!
-msg.erro.generico=Ocorreu um erro na requisição: Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site ({email.empresa}) e informar o problema!
+msg.erro.500=Ocorreu um erro interno no servidor. Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com) e informar o problema!
+msg.erro.generico=Ocorreu um erro na requisição: Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com) e informar o problema!
 
 msg.erro.login.invalido=Email ou senha inválidos!
 msg.erro.email.ja.cadastrado=Email já cadastrado!
@@ -27,3 +27,4 @@ msg.erro.campo.deve.ser.igual=Não corresponde, favor conferir! O conteúdo dos ca
 
 #MENSAGENS DE SUCESSO -------------------------------------------------------
 msg.sucesso.reenvio.senha=A senha cadastrada foi enviada para o seu email.
+msg.sucesso.cadastro.usuario=Cadastro realizado com sucesso! Seja bem vindo!
