- Feita a tela de solicitação de passaporte - Início da lógica de validação na classe da solicitação de passaporte

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,7 +16,7 @@ msg.erro.buscar.email=Email não cadastrado!
 msg.erro.envio.email=Erro ao enviar email. Tente novamente após alguns instantes, se o erro persistir, contate a equipe técnica do sistema (contatoevisas@gmail.com).
 
 #MENSAGENS DE ERRO VALIDAÇÃO ------------------------------------------------
-javax.validation.constraints.NotBlank.message=O campo não pode estar vazio!
+javax.validation.constraints.NotBlank.message=O campo deve ser preenchido!
 javax.validation.constraints.Size.message=O campo deve ter entre {min} e {max} caracteres!
 javax.validation.constraints.Email.message=O campo deve conter um email válido!
 javax.validation.constraints.Pattern.message=Formato inválido!
@@ -24,6 +24,10 @@ javax.validation.constraints.Pattern.message=Formato inválido!
 msg.erro.tamanho.minimo.campo=O campo deve ter pelo menos {0} caracteres!
 msg.erro.tamanho.maximo.campo=O campo deve ter até {0} caracteres!
 msg.erro.campo.deve.ser.igual=Não corresponde, favor conferir! O conteúdo dos campos devem ser iguais!
+msg.erro.valor.deve.ser.maior.igual=O valor do campo deve ser maior ou igual à '{0}'
+msg.erro.valor.deve.ser.menor.igual=O valor do campo deve ser menor ou igual à '{0}'
+msg.erro.data.deve.ser.anterior.ou.igual=A data deve ser anterior ou igual à '{0}'
+msg.erro.data.deve.ser.posterior.ou.igual=A data deve ser posterior ou igual à '{0}'
 
 #MENSAGENS DE SUCESSO -------------------------------------------------------
 msg.sucesso.reenvio.senha=A senha cadastrada foi enviada para o seu email.
