- Feita a tela de solicitação de visto - Início da lógica de validação na classe da solicitação de visto

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,6 +28,8 @@ msg.erro.valor.deve.ser.maior.igual=O valor do campo deve ser maior ou igual à '
 msg.erro.valor.deve.ser.menor.igual=O valor do campo deve ser menor ou igual à '{0}'
 msg.erro.data.deve.ser.anterior.ou.igual=A data deve ser anterior ou igual à '{0}'
 msg.erro.data.deve.ser.posterior.ou.igual=A data deve ser posterior ou igual à '{0}'
+msg.erro.arquivo.extensao.invalida=Extensão do arquivo inválida!
+msg.erro.arquivo.muito.grande=Tamanho do arquivo muito grande!
 
 #MENSAGENS DE SUCESSO -------------------------------------------------------
 msg.sucesso.reenvio.senha=A senha cadastrada foi enviada para o seu email.
