- Criada funcionalidade de solicitar visto - Criadas as queries e métodos no DAO de solicitação de visto - Adicionando atributo 'idUsuario' às solicitações, para referenciar o usuário que as criou

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -35,3 +35,4 @@ msg.erro.arquivo.muito.grande=Tamanho do arquivo muito grande!
 msg.sucesso.reenvio.senha=A senha cadastrada foi enviada para o seu email.
 msg.sucesso.cadastro.usuario=Cadastro realizado com sucesso! Seja bem vindo!
 msg.sucesso.solicitar.passaporte=Passaporte solicitado com sucesso! Acompanhe abaixo o aceite da sua solicitação!
+msg.sucesso.solicitar.visto=Visto solicitado com sucesso! Acompanhe abaixo o aceite da sua solicitação!
