- Funcionalidade de solicitar visto agora está gravando documento informado. - Feito validadores no lado servidor para o arquivo passado.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,12 +14,16 @@ msg.erro.login.invalido=Email ou senha inválidos!
 msg.erro.email.ja.cadastrado=Email já cadastrado!
 msg.erro.buscar.email=Email não cadastrado!
 msg.erro.envio.email=Erro ao enviar email. Tente novamente após alguns instantes, se o erro persistir, contate a equipe técnica do sistema (contatoevisas@gmail.com).
+msg.erro.gravar.documento=Erro ao salvar o documento no servidor! Verifique se o arquivo está Ok e tente novamente, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com)
 
 #MENSAGENS DE ERRO VALIDAÇÃO ------------------------------------------------
 javax.validation.constraints.NotBlank.message=O campo deve ser preenchido!
 javax.validation.constraints.Size.message=O campo deve ter entre {min} e {max} caracteres!
 javax.validation.constraints.Email.message=O campo deve conter um email válido!
 javax.validation.constraints.Pattern.message=Formato inválido!
+
+msg.erro.validacao.filesize=Arquivo deve ter tamanho entre {min} e {max} bytes!
+msg.erro.validacao.fileExtension=Extensão do arquivo inválida!
 
 msg.erro.tamanho.minimo.campo=O campo deve ter pelo menos {0} caracteres!
 msg.erro.tamanho.maximo.campo=O campo deve ter até {0} caracteres!
@@ -28,8 +32,7 @@ msg.erro.valor.deve.ser.maior.igual=O valor do campo deve ser maior ou igual à '
 msg.erro.valor.deve.ser.menor.igual=O valor do campo deve ser menor ou igual à '{0}'
 msg.erro.data.deve.ser.anterior.ou.igual=A data deve ser anterior ou igual à '{0}'
 msg.erro.data.deve.ser.posterior.ou.igual=A data deve ser posterior ou igual à '{0}'
-msg.erro.arquivo.extensao.invalida=Extensão do arquivo inválida!
-msg.erro.arquivo.muito.grande=Tamanho do arquivo muito grande!
+msg.erro.arquivo.muito.grande=Arquivo muito grande! Arquivo deve ter até {0} bytes!
 
 #MENSAGENS DE SUCESSO -------------------------------------------------------
 msg.sucesso.reenvio.senha=A senha cadastrada foi enviada para o seu email.
