- Criada funcionalidade do usuário Cancelar e de Editar uma solicitação de passaporte

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,6 +16,8 @@ msg.erro.buscar.email=Email não cadastrado!
 msg.erro.envio.email=Erro ao enviar email. Tente novamente após alguns instantes, se o erro persistir, contate a equipe técnica do sistema (contatoevisas@gmail.com).
 msg.erro.gravar.documento=Erro ao salvar o documento no servidor! Verifique se o arquivo está Ok e tente novamente, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com)
 msg.erro.permissao.acesso.solicitacao=Sem permissão de acesso à esta solicitação!
+msg.erro.editar.solicitacao=Ocorreu um erro ao editar a solicitação! Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com) e informar o problema!
+msg.erro.alterar.status.solicitacao=Ocorreu um erro ao alterar o status da solicitação! Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com) e informar o problema!
 
 #MENSAGENS DE ERRO VALIDAÇÃO ------------------------------------------------
 javax.validation.constraints.NotBlank.message=O campo deve ser preenchido!
@@ -38,5 +40,11 @@ msg.erro.arquivo.muito.grande=Arquivo muito grande! Arquivo deve ter até {0} byt
 #MENSAGENS DE SUCESSO -------------------------------------------------------
 msg.sucesso.reenvio.senha=A senha cadastrada foi enviada para o seu email.
 msg.sucesso.cadastro.usuario=Cadastro realizado com sucesso! Seja bem vindo!
+
 msg.sucesso.solicitar.passaporte=Passaporte solicitado com sucesso! Acompanhe abaixo o aceite da sua solicitação!
+msg.sucesso.editar.solicitacao.passaporte=Solicitação de Passaporte editada com sucesso!
+msg.sucesso.cancelar.solicitacao.passaporte=Solicitação de Passaporte cancelada com sucesso!
+
 msg.sucesso.solicitar.visto=Visto solicitado com sucesso! Acompanhe abaixo o aceite da sua solicitação!
+msg.sucesso.editar.solicitacao.visto=Solicitação de Visto editada com sucesso!
+msg.sucesso.cancelar.solicitacao.visto=Solicitação de Visto cancelada com sucesso!
