--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ msg.erro.email.ja.cadastrado=Email já cadastrado!
 msg.erro.buscar.email=Email não cadastrado!
 msg.erro.envio.email=Erro ao enviar email. Tente novamente após alguns instantes, se o erro persistir, contate a equipe técnica do sistema (contatoevisas@gmail.com).
 msg.erro.gravar.documento=Erro ao salvar o documento no servidor! Verifique se o arquivo está Ok e tente novamente, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com)
+msg.erro.ler.documento=Erro ao ler o documento no servidor! Tente novamente após alguns instantes, se o erro persistir, contate a equipe técnica do sistema (contatoevisas@gmail.com).
 msg.erro.permissao.acesso.solicitacao=Sem permissão de acesso à esta solicitação!
 msg.erro.editar.solicitacao=Ocorreu um erro ao editar a solicitação! Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com) e informar o problema!
 msg.erro.alterar.status.solicitacao=Ocorreu um erro ao alterar o status da solicitação! Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com) e informar o problema!
