- Feita tela e funcionalidade de login de funcionarios - Feito esboço das telas do funcionário e navegação (via links) dentro da aplicação (home e listagem das solicitações de passaporte e visto) - Feito interceptador para validar funcionário autenticado e permissão de acessar as suas funcionalidades.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,7 @@ msg.erro.500=Ocorreu um erro interno no servidor. Tente novamente em alguns inst
 msg.erro.generico=Ocorreu um erro na requisição: Tente novamente em alguns instantes, se o erro persistir favor contatar o suporte técnico do site (contatoevisas@gmail.com) e informar o problema!
 
 msg.erro.login.invalido=Email ou senha inválidos!
+msg.erro.login.funcionario.invalido=Matrícula ou senha inválidos!
 msg.erro.email.ja.cadastrado=Email já cadastrado!
 msg.erro.buscar.email=Email não cadastrado!
 msg.erro.envio.email=Erro ao enviar email. Tente novamente após alguns instantes, se o erro persistir, contate a equipe técnica do sistema (contatoevisas@gmail.com).
