- Colocando barra de navegação do funcionário (faltou no último commit) - Fazendo a consulta das solicitações de visto e passaporte por parte do funcionário - Permitindo funcionário aceitar ou recusar solicitações - Mostrando o motivo de recusa nas consultas das solicitações

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -46,7 +46,11 @@ msg.sucesso.cadastro.usuario=Cadastro realizado com sucesso! Seja bem vindo!
 msg.sucesso.solicitar.passaporte=Passaporte solicitado com sucesso! Acompanhe abaixo o aceite da sua solicitação!
 msg.sucesso.editar.solicitacao.passaporte=Solicitação de Passaporte editada com sucesso!
 msg.sucesso.cancelar.solicitacao.passaporte=Solicitação de Passaporte cancelada com sucesso!
+msg.sucesso.aceitar.solicitacao.passaporte=Solicitação de Passaporte aceita com sucesso!
+msg.sucesso.recusar.solicitacao.passaporte=Solicitação de Passaporte recusada com sucesso!
 
 msg.sucesso.solicitar.visto=Visto solicitado com sucesso! Acompanhe abaixo o aceite da sua solicitação!
 msg.sucesso.editar.solicitacao.visto=Solicitação de Visto editada com sucesso!
 msg.sucesso.cancelar.solicitacao.visto=Solicitação de Visto cancelada com sucesso!
+msg.sucesso.aceitar.solicitacao.visto=Solicitação de Visto aceita com sucesso!
+msg.sucesso.recusar.solicitacao.visto=Solicitação de Visto recusada com sucesso!
